sfSandBoxCode/force-app/main/default/objects/Location__c/fields/School_Assumed_Population__c.field-meta.xml
<CustomField>
    <fullName>School_Assumed_Population__c</fullName>
    <label>School Assumed Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>