sfSandBoxCode/force-app/main/default/objects/Location__c/fields/School_Population_with_Access_to_FLTs__c.field-meta.xml
<CustomField>
    <fullName>School_Population_with_Access_to_FLTs__c</fullName>
    <label>School Population with Access to FLTs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>