sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Single_Use_Fee_Adults__c.field-meta.xml
<CustomField>
    <fullName>Single_Use_Fee_Adults__c</fullName>
    <inlineHelpText>Please enter the single use fee charge for adults</inlineHelpText>
    <label>Single Use Fee - Adults</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>