sfSandBoxCode/force-app/main/default/objects/Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Google Maps Required</description>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>