sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Sum_Mystery_Loo_Score__c.field-meta.xml
<CustomField>
    <fullName>Sum_Mystery_Loo_Score__c</fullName>
    <label>Sum Mystery Loo Score</label>
    <summarizedField>Field_Report__c.MLU_Score__c</summarizedField>
    <summaryFilterItems>
        <field>Field_Report__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Mystery Loo Reports, Mystery Loo- Schools</value>
    </summaryFilterItems>
    <summaryForeignKey>Field_Report__c.Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>