sfSandBoxCode/force-app/main/default/objects/Location__c/fields/SUM_Percent_Days_Open_del__c.field-meta.xml
<CustomField>
    <fullName>SUM_Percent_Days_Open_del__c</fullName>
    <description>Summary of the percent of days open for each toilet.</description>
    <label>SUM Percent Days Open</label>
    <summarizedField>Toilet__c.Percent_of_days_open_1__c</summarizedField>
    <summaryForeignKey>Toilet__c.Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>