sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Target_Percent_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Target_Percent_Days_Open__c</fullName>
    <description>Updated via WF rule based on fields &quot;Number of days open in a typical week&quot; and franchise type.</description>
    <inlineHelpText>This field is automatically updated based on the toilet&#39;s franchise type and the number of days open in a typical week. It is automatically set at 100% for all new toilets until anything else changes.</inlineHelpText>
    <label>Target Percent Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>