sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>The total amount assessed for all toilets at this location.</description>
    <inlineHelpText>The total amount assessed for all toilets at this location.</inlineHelpText>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>