sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Total_Waste_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Waste_Collected__c</fullName>
    <description>Total waste collected at this toilet since opening</description>
    <inlineHelpText>Total waste collected at this toilet since opening</inlineHelpText>
    <label>Total Waste Collected</label>
    <summarizedField>Toilet__c.Summary_Waste_Day__c</summarizedField>
    <summaryForeignKey>Toilet__c.Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>