sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Usage_Target__c.field-meta.xml
<CustomField>
    <fullName>Usage_Target__c</fullName>
    <description>Usage Target for a toilet-- decided based on the toilet&#39;s Franchise Type.</description>
    <inlineHelpText>KR &amp; Commercial Open Market=56/ KR &amp; Commercial Residential=59/ VW &amp; Commercial Open Market=40 / VW &amp; Commercial Residential=49/ KN &amp; Commercial Open Market=40/ KN &amp; Commercial Residential=24</inlineHelpText>
    <label>Usage Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>