sfSandBoxCode/force-app/main/default/objects/Location__c/fields/Waste_User_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Waste_User_Ratio__c</fullName>
    <defaultValue>0.302</defaultValue>
    <inlineHelpText>Please enter the waste to user ratio for this particular location</inlineHelpText>
    <label>Waste:User Ratio</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>