sfSandBoxCode/force-app/main/default/objects/Location__c/recordTypes/Competitor_Location.recordType-meta.xml
<RecordType>
    <fullName>Competitor_Location</fullName>
    <active>true</active>
    <label>Competitor Location</label>
</RecordType>