sfSandBoxCode/force-app/main/default/objects/Location__c/recordTypes/Corporate_Partner_Location.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Partner_Location</fullName>
    <active>true</active>
    <description>Sanergy Corporate Partner Locations</description>
    <label>Corporate Partner Location</label>
</RecordType>