sfSandBoxCode/force-app/main/default/objects/Location__c/recordTypes/Sanergy_Location.recordType-meta.xml
<RecordType>
    <fullName>Sanergy_Location</fullName>
    <active>true</active>
    <label>Fresh Life Location</label>
</RecordType>