sfSandBoxCode/force-app/main/default/objects/Location__c/recordTypes/Trial_Installations.recordType-meta.xml
<RecordType>
    <fullName>Trial_Installations</fullName>
    <active>true</active>
    <description>All installations done by SLK for trial basis. Includes PTT</description>
    <label>Trial Installations</label>
</RecordType>