sfSandBoxCode/force-app/main/default/objects/Location__c/validationRules/Validate_Plot_Toilet_Location_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Plot_Toilet_Location_field</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
   OR(
    ISPICKVAL( Franchise_Type__c, &quot;Non-Commercial-Plot&quot;),
    ISPICKVAL( Franchise_Type__c, &quot;Hybrid-Plot&quot;)
   ),
   ISPICKVAL(  Plot_Toilet_Location__c , &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Plot_Toilet_Location__c</errorDisplayField>
    <errorMessage>The &quot;Plot Toilet Location&quot; field has to be filled if the Franchise Type is either &quot;Non-Commercial-Plot&quot; or &quot;Hybrid-Plot&quot;</errorMessage>
</ValidationRule>