sfSandBoxCode/force-app/main/default/objects/Location__c/validationRules/Waste_User_Ratio.validationRule-meta.xml
<ValidationRule>
    <fullName>Waste_User_Ratio</fullName>
    <active>true</active>
    <description>User Waste Ratio - Schools: 0.2236kg; Other: 0.3020kg</description>
    <errorConditionFormula>AND
(
IF(CONTAINS(TEXT(Franchise_Type__c),&quot;School&quot;) &amp;&amp; Waste_User_Ratio__c &lt;&gt; 0.2236,TRUE,
IF(NOT(CONTAINS(TEXT(Franchise_Type__c),&quot;School&quot;)) &amp;&amp; Waste_User_Ratio__c &lt;&gt; 0.3020,TRUE,FALSE))
) = TRUE</errorConditionFormula>
    <errorDisplayField>City__c</errorDisplayField>
    <errorMessage>If Franchise Type = Schools, ratio should be &quot;0.2236kg&quot; else &quot;0.302kg&quot; for other Franchise Types</errorMessage>
</ValidationRule>