sfSandBoxCode/force-app/main/default/objects/Location__c/listViews/All_Sanergy_Locations.listView-meta.xml
<ListView>
    <fullName>All_Sanergy_Locations</fullName>
    <columns>NAME</columns>
    <columns>of_toilets_OPEN__c</columns>
    <columns>Area__c</columns>
    <columns>Sub_Area__c</columns>
    <columns>Franchise_Type__c</columns>
    <columns>Usage_Target__c</columns>
    <columns>Average_Users_Day_Toilet_OPEN__c</columns>
    <columns>Average_Users_Day_Toilet_THIS_QUARTER__c</columns>
    <columns>Assumed_Daily_Profit__c</columns>
    <columns>Assumed_Total_Profit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Location__c.Sanergy_Location</value>
    </filters>
    <label>All Sanergy Locations</label>
    <language>en_US</language>
</ListView>