sfSandBoxCode/force-app/main/default/objects/Location__c/listViews/Marketing_Assessment_Reports.listView-meta.xml
<ListView>
    <fullName>Marketing_Assessment_Reports</fullName>
    <columns>NAME</columns>
    <columns>GPS_Longitude__c</columns>
    <columns>GPS_Latitude__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Location__c.Sanergy_Location</value>
    </filters>
    <label>Sanergy Locations</label>
    <language>en_US</language>
</ListView>